--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
 </head>
 <body>
-    Muhammad Mustafa Ahmed Mujtaba
+<input type="text" autofocus placeholder="Query" autocomplete="off"/>
+<ul></ul>
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+<script>
+let input= document.querySelector('input');
+input.onkeyup= function(){
+    $.get('/search?q=' + input.value, function(data){
+        console.log('data=',data);
+        
+        document.querySelector('ul').innerHTML=data;
+    })
+}
+
+</script>
+
 </body>
 </html>
